force-app/main/default/objects/PayrollSlip__c/fields/ActualGrossBase__c.field-meta.xml
<CustomField>
    <fullName>ActualGrossBase__c</fullName>
    <formula>ActualSalary__c   +  Incentives__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Gross Base=Actual Salary+Incentives</inlineHelpText>
    <label>ACTUAL GROSS BASE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>