force-app/main/default/objects/PayrollSlip__c/fields/ActualMealAllowance__c.field-meta.xml
<CustomField>
    <fullName>ActualMealAllowance__c</fullName>
    <formula>EmployeeID__r.Meal_Allowance__c</formula>
    <inlineHelpText>Monthly Actual Meal Allowance=Meal Allowance Per Day in Employee* Actual Worked Date</inlineHelpText>
    <label>ACTUAL MEAL ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>