force-app/main/default/objects/PayrollSlip__c/fields/actualnetincome__c.field-meta.xml
<CustomField>
    <fullName>actualnetincome__c</fullName>
    <formula>incomeaftertaxes__c + Arrears_backpay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>