force-app/main/default/objects/PayrollSlip__c/fields/actualnetincomePR__c.field-meta.xml
<CustomField>
    <fullName>actualnetincomePR__c</fullName>
    <description>This fields is update by workflow rule &amp; used to update to Payroll via rollup function.</description>
    <inlineHelpText>This fields is update by workflow rule &amp; used to update to Payroll via rollup function.</inlineHelpText>
    <label>Actual Net Income - PR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>