force-app/main/default/objects/PayrollSlip__c/fields/ActualPayrollPaidDate__c.field-meta.xml
<CustomField>
    <fullName>ActualPayrollPaidDate__c</fullName>
    <label>ACTUAL PAYROLL PAID DATE</label>
    <type>Date</type>
</CustomField>