force-app/main/default/objects/PayrollSlip__c/fields/ActualRelocationAllowance__c.field-meta.xml
<CustomField>
    <fullName>ActualRelocationAllowance__c</fullName>
    <formula>EmployeeID__r.RelocationAllowance__c  *  PercentageOfPaidDay__c</formula>
    <inlineHelpText>Actual Relocation Allowance=Relocation Allowance in Employee* Percentage of Paid Day</inlineHelpText>
    <label>ACTUAL RELOCATION ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>