force-app/main/default/objects/PayrollSlip__c/fields/ActualSalary__c.field-meta.xml
<CustomField>
    <fullName>ActualSalary__c</fullName>
    <formula>EmployeeID__r.BaseSalaryLocal__c 
+ TotalActualAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Salary=Base Salary(Local) In Employee+Monthly Total Actual Allowance</inlineHelpText>
    <label>ACTUAL SALARY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>