force-app/main/default/objects/PayrollSlip__c/fields/ActualTelephoneAllowance__c.field-meta.xml
<CustomField>
    <fullName>ActualTelephoneAllowance__c</fullName>
    <formula>EmployeeID__r.TelephoneAllowance__c  *  PercentageOfPaidDay__c</formula>
    <inlineHelpText>Actual Telephone Allowance=Telephone Allowance in Employee* Percentage of Paid Day</inlineHelpText>
    <label>ACTUAL TELEPHONE ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>