force-app/main/default/objects/PayrollSlip__c/fields/ActualWorkedDay__c.field-meta.xml
<CustomField>
    <fullName>ActualWorkedDay__c</fullName>
    <label>ACTUAL WORKED DAY</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>