force-app/main/default/objects/PayrollSlip__c/fields/ActualWorkedPaidLeaveDay__c.field-meta.xml
<CustomField>
    <fullName>ActualWorkedPaidLeaveDay__c</fullName>
    <formula>ActualWorkedDay__c  +  NumberOfDaysForPaidLeave__c +  holidayleave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Worked &amp; Paid Leave Day=Actual Worked Day+Number of Days For Paid Leave</inlineHelpText>
    <label>ACTUAL WORKED &amp; PAID LEAVE DAY</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>