force-app/main/default/objects/PayrollSlip__c/fields/AmoutPaidPayrollLocal__c.field-meta.xml
<CustomField>
    <fullName>AmoutPaidPayrollLocal__c</fullName>
    <label>AMOUNT PAID-PAYROLLP(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>