force-app/main/default/objects/PayrollSlip__c/fields/Arrears_backpay__c.field-meta.xml
<CustomField>
    <fullName>Arrears_backpay__c</fullName>
    <label>Arrears/Back pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>