force-app/main/default/objects/PayrollSlip__c/fields/basicsalary__c.field-meta.xml
<CustomField>
    <fullName>basicsalary__c</fullName>
    <label>Basic salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>