force-app/main/default/objects/PayrollSlip__c/fields/bonus__c.field-meta.xml
<CustomField>
    <fullName>bonus__c</fullName>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>