force-app/main/default/objects/PayrollSlip__c/fields/BonusIncentivesID__c.field-meta.xml
<CustomField>
    <fullName>BonusIncentivesID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BONUS &amp; INCENTIVES ID</label>
    <referenceTo>BonusIncentivesCalculation__c</referenceTo>
    <relationshipName>PayrollSlip</relationshipName>
    <type>Lookup</type>
</CustomField>