force-app/main/default/objects/PayrollSlip__c/fields/checkduplicatepayslip__c.field-meta.xml
<CustomField>
    <fullName>checkduplicatepayslip__c</fullName>
    <label>Check Duplicate Payslip</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>