force-app/main/default/objects/PayrollSlip__c/fields/contracttype__c.field-meta.xml
<CustomField>
    <fullName>contracttype__c</fullName>
    <label>Contract type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Probation Contract</fullName>
            </value>
            <value>
                <fullName>Labor Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>