force-app/main/default/objects/PayrollSlip__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMPLOYEE ID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>PAYROLL_SLIP</relationshipName>
    <type>Lookup</type>
</CustomField>