force-app/main/default/objects/PayrollSlip__c/fields/EmployeeNetTakenHome__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNetTakenHome__c</fullName>
    <label>EMPLOYEE NET TAKEN HOME</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>