force-app/main/default/objects/PayrollSlip__c/fields/Financial_year__c.field-meta.xml
<CustomField>
    <fullName>Financial_year__c</fullName>
    <formula>YEAR( PayrollOrder__r.PayPeriodStartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>