force-app/main/default/objects/PayrollSlip__c/fields/healthInsuranceemployerside__c.field-meta.xml
<CustomField>
    <fullName>healthInsuranceemployerside__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c* hrpolicy__r.HealthInsuranceRatioByEmployer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>3% of  Salary to Contribute Social Insurance</inlineHelpText>
    <label>Health Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>