force-app/main/default/objects/PayrollSlip__c/fields/holidayleave__c.field-meta.xml
<CustomField>
    <fullName>holidayleave__c</fullName>
    <label>Holiday leave</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>