force-app/main/default/objects/PayrollSlip__c/fields/HousingAllowanceTax__c.field-meta.xml
<CustomField>
    <fullName>HousingAllowanceTax__c</fullName>
    <label>HOUSING ALLOWANCE TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>