force-app/main/default/objects/PayrollSlip__c/fields/hrpolicy__c.field-meta.xml
<CustomField>
    <fullName>hrpolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Policy</label>
    <referenceTo>HRStandard__c</referenceTo>
    <relationshipLabel>PAYSLIP</relationshipLabel>
    <relationshipName>PAYSLIP</relationshipName>
    <type>Lookup</type>
</CustomField>