force-app/main/default/objects/PayrollSlip__c/fields/Incentivebyquarta__c.field-meta.xml
<CustomField>
    <fullName>Incentivebyquarta__c</fullName>
    <label>Incentive by quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>