force-app/main/default/objects/PayrollSlip__c/fields/Incentives__c.field-meta.xml
<CustomField>
    <fullName>Incentives__c</fullName>
    <label>INCENTIVES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>