force-app/main/default/objects/PayrollSlip__c/fields/insurancededuction__c.field-meta.xml
<CustomField>
    <fullName>insurancededuction__c</fullName>
    <formula>totalamountofinsuranceemployerside__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal Total amount of insurance</inlineHelpText>
    <label>Insurance deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>