force-app/main/default/objects/PayrollSlip__c/fields/JoinedDate__c.field-meta.xml
<CustomField>
    <fullName>JoinedDate__c</fullName>
    <formula>EmployeeID__r.JoinedDate__c</formula>
    <label>JOINED DATE</label>
    <type>Date</type>
</CustomField>