force-app/main/default/objects/PayrollSlip__c/fields/MonthlyActualOvertimeAllowance__c.field-meta.xml
<CustomField>
    <fullName>MonthlyActualOvertimeAllowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MONTHLY ACTUAL OVERTIME ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>