force-app/main/default/objects/PayrollSlip__c/fields/otherdeduction__c.field-meta.xml
<CustomField>
    <fullName>otherdeduction__c</fullName>
    <formula>TotalActualAllowance__c +(( totalovertime__c -( Overtime1__c +Overtime2__c+overtime3__c))*( salarybyworkingday__c / StandardWorkingday__c /8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>