force-app/main/default/objects/PayrollSlip__c/fields/OtherRefund__c.field-meta.xml
<CustomField>
    <fullName>OtherRefund__c</fullName>
    <label>OTHER REFUND</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>