force-app/main/default/objects/PayrollSlip__c/fields/Overtime1__c.field-meta.xml
<CustomField>
    <fullName>Overtime1__c</fullName>
    <label>Over time 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>