force-app/main/default/objects/PayrollSlip__c/fields/overtime3__c.field-meta.xml
<CustomField>
    <fullName>overtime3__c</fullName>
    <label>Over time 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>