force-app/main/default/objects/PayrollSlip__c/fields/PaymentTermPayroll__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermPayroll__c</fullName>
    <label>PAYMENT TERM-PAYROLL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerm</valueSetName>
    </valueSet>
</CustomField>