force-app/main/default/objects/PayrollSlip__c/fields/PayPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>PayPeriodStartDate__c</fullName>
    <label>PAY PERIOD START DATE</label>
    <type>Date</type>
</CustomField>