force-app/main/default/objects/PayrollSlip__c/fields/Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_ID__c</fullName>
    <label>Payroll ID</label>
    <length>21</length>
    <type>Text</type>
</CustomField>