force-app/main/default/objects/PayrollSlip__c/fields/PayrollCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>PayrollCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYROLL CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>PAYROLL_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>