force-app/main/default/objects/PayrollSlip__c/fields/PayrollOrder__c.field-meta.xml
<CustomField>
    <fullName>PayrollOrder__c</fullName>
    <label>PAYROLL ORDER</label>
    <referenceTo>PayrollOrder__c</referenceTo>
    <relationshipName>PAYROLL_SLIP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>