force-app/main/default/objects/PayrollSlip__c/fields/PayslipBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>PayslipBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>PAYSLIP BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>