force-app/main/default/objects/PayrollSlip__c/fields/PayslipIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>PayslipIssuedDate__c</fullName>
    <label>PAYSLIP ISSUED DATE</label>
    <type>Date</type>
</CustomField>