force-app/main/default/objects/PayrollSlip__c/fields/PersonalTaxCode__c.field-meta.xml
<CustomField>
    <fullName>PersonalTaxCode__c</fullName>
    <formula>EmployeeID__r.PersonalTaxCode__c</formula>
    <label>PERSONAL TAX CODE</label>
    <type>Text</type>
</CustomField>