force-app/main/default/objects/PayrollSlip__c/fields/productivitysalary__c.field-meta.xml
<CustomField>
    <fullName>productivitysalary__c</fullName>
    <label>Productivity salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>