force-app/main/default/objects/PayrollSlip__c/fields/ResourceID__c.field-meta.xml
<CustomField>
    <fullName>ResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RESOURCES ID</label>
    <referenceTo>resource__c</referenceTo>
    <relationshipName>PAYROLL_SLIP</relationshipName>
    <type>Lookup</type>
</CustomField>