force-app/main/default/objects/PayrollSlip__c/fields/salarybyovertime__c.field-meta.xml
<CustomField>
    <fullName>salarybyovertime__c</fullName>
    <formula>(( basicsalary__c + productivitysalary__c )/
( StandardWorkingday__c *8))* totalovertime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>[(Basic salary + Productivity salary)/(Standard Working day*8hours)]*Total Overtime</inlineHelpText>
    <label>Salary by overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>