force-app/main/default/objects/PayrollSlip__c/fields/SalaryToContributeSocialInsurance__c.field-meta.xml
<CustomField>
    <fullName>SalaryToContributeSocialInsurance__c</fullName>
    <formula>hrpolicy__r.salarytocontributesocialinsurance__c</formula>
    <inlineHelpText>If Actual Gross Base is greater or equal to Minimum Salary Base Amount in HR Policy, Salary to Contribute Social Insurance=Minimum Salary Base Amount in HR Policy,
Otherwise, Salary To Contribute Social Insurance=Actual Gross Base</inlineHelpText>
    <label>SALARY TO CONTRIBUTE SOCIAL INSURANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>