force-app/main/default/objects/PayrollSlip__c/fields/StandardWorkingday__c.field-meta.xml
<CustomField>
    <fullName>StandardWorkingday__c</fullName>
    <label>Standard Working day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>