force-app/main/default/objects/PayrollSlip__c/fields/taxableincome__c.field-meta.xml
<CustomField>
    <fullName>taxableincome__c</fullName>
    <formula>totalincomebeforetax__c - totaldeduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal Total income before tax - total deduction</inlineHelpText>
    <label>Taxable income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>