force-app/main/default/objects/PayrollSlip__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>EmployeeID__r.Title__c</formula>
    <label>TITLE</label>
    <type>Text</type>
</CustomField>