force-app/main/default/objects/PayrollSlip__c/fields/TotalActualAllowance__c.field-meta.xml
<CustomField>
    <fullName>TotalActualAllowance__c</fullName>
    <formula>ActualGasolineAllowance__c  +  ActualHousingAllowance__c   +  ActualMealAllowance__c   +  ActualRelocationAllowance__c   +  ActualTelephoneAllowance__c   +  ActualUniformAllowance__c  + 
 MonthlyActualOvertimeAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Actual Allowance=Monthly Actual Uniform Allowance+Monthly Actual Housing Allowance\T\R\N+Monthly Actual Gasoline Allowance+Monthly Actual Telephone Allowance+Monthly Actual Relocation Allowance+Monthly Actual Meal Allowance</inlineHelpText>
    <label>TOTAL ACTUAL ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>