force-app/main/default/objects/PayrollSlip__c/fields/totalamountoffamilydeduction__c.field-meta.xml
<CustomField>
    <fullName>totalamountoffamilydeduction__c</fullName>
    <formula>numberofdependents__c * hrpolicy__r.StandardDependentDeductionPerPerson__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal Standard Dependent Deduction per Person in HR policy * Number of dependents</inlineHelpText>
    <label>Total amount of family deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>