force-app/main/default/objects/PayrollSlip__c/fields/totalamountofinsuranceemployerside__c.field-meta.xml
<CustomField>
    <fullName>totalamountofinsuranceemployerside__c</fullName>
    <formula>unionfund__c + socialinsuranceemployerside__c + healthInsuranceemployerside__c + unemploymentinsuranceemployerside__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount of insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>