force-app/main/default/objects/PayrollSlip__c/fields/TotalamountofinsurancePR__c.field-meta.xml
<CustomField>
    <fullName>TotalamountofinsurancePR__c</fullName>
    <description>This fields is update by workflow rule and used to update into Payroll by roll up function</description>
    <inlineHelpText>This fields is update by workflow rule and used to update into Payroll by roll up function</inlineHelpText>
    <label>Total amount of insurance - PR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>