force-app/main/default/objects/PayrollSlip__c/fields/totalovertime__c.field-meta.xml
<CustomField>
    <fullName>totalovertime__c</fullName>
    <formula>( Overtime1__c * hrpolicy__r.overtimerange1__c )+
( Overtime2__c * hrpolicy__r.overtimerange2__c )+
( overtime3__c * hrpolicy__r.overtimerange3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>