force-app/main/default/objects/PayrollSlip__c/fields/TotalWithholding__c.field-meta.xml
<CustomField>
    <fullName>TotalWithholding__c</fullName>
    <formula>WithholdingSocialInsurance__c  +  WithholdingPersonalIncomeTax__c  +  OtherWithholding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Withholding=Withholding Compulsory Social Insurance+Withholding Personal Income Tax+Other Withholding</inlineHelpText>
    <label>TOTAL WITHHOLDING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>