force-app/main/default/objects/PayrollSlip__c/fields/TotalWithholdingAfterDeduction__c.field-meta.xml
<CustomField>
    <fullName>TotalWithholdingAfterDeduction__c</fullName>
    <formula>TotalWithholding__c  -   TotalRefund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Withholding After Refund Deduction=Total Withholding-Total Refund</inlineHelpText>
    <label>TOTAL WITHHOLDING AFTER REFUND DEDUCTION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>