force-app/main/default/objects/PayrollSlip__c/fields/totalwithholdingt__c.field-meta.xml
<CustomField>
    <fullName>totalwithholdingt__c</fullName>
    <formula>PIT__c + totalamountofinsuranceemployerside__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equal Total Withholding for Insurance + PIT</inlineHelpText>
    <label>Total Withholding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>