force-app/main/default/objects/PayrollSlip__c/fields/typeoftax__c.field-meta.xml
<CustomField>
    <fullName>typeoftax__c</fullName>
    <label>Type of tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flexible</fullName>
                <default>true</default>
                <label>Flexible</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>