force-app/main/default/objects/PayrollSlip__c/fields/unionfund__c.field-meta.xml
<CustomField>
    <fullName>unionfund__c</fullName>
    <formula>hrpolicy__r.unionfundratiobyemployer__c * SalaryToContributeSocialInsurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Union fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>