force-app/main/default/objects/PayrollSlip__c/fields/UserAccountID__c.field-meta.xml
<CustomField>
    <fullName>UserAccountID__c</fullName>
    <formula>EmployeeID__r.UserAccountID__c</formula>
    <label>USER ACCOUNT ID</label>
    <type>Text</type>
</CustomField>