force-app/main/default/objects/PayrollSlip__c/fields/withholdingcompulsoryhealthInsurance__c.field-meta.xml
<CustomField>
    <fullName>withholdingcompulsoryhealthInsurance__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c *  hrpolicy__r.HealthInsuranceRatioByEmployee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary to Contribute Social Insurance * Health Insurance Ratio by Employee</inlineHelpText>
    <label>Withholding Compulsory Health Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>