force-app/main/default/objects/PayrollSlip__c/fields/Withholdingcompulsoryunemployeeinsurance__c.field-meta.xml
<CustomField>
    <fullName>Withholdingcompulsoryunemployeeinsurance__c</fullName>
    <formula>SalaryToContributeSocialInsurance__c *  hrpolicy__r.UnemploymentFundRatioByEmployee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salary to Contribute Social Insurance * Unemployment Fund Ratio by Employee</inlineHelpText>
    <label>Withholding Compulsory Unemployee Ins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>