force-app/main/default/objects/PayrollSlip__c/fields/WithholdingSocialInsurance__c.field-meta.xml
<CustomField>
    <fullName>WithholdingSocialInsurance__c</fullName>
    <label>WITHHOLDING COMPULSORY SOCIAL INSURANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>