force-app/main/default/objects/PayrollSlip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EmployeeID__c</columns>
    <columns>hrpolicy__c</columns>
    <columns>ActualWorkedDay__c</columns>
    <columns>salarybyworkingday__c</columns>
    <columns>totalincomebeforetax__c</columns>
    <columns>totaldeduction__c</columns>
    <columns>actualnetincome__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>HRManager</role>
        <role>HRStaff</role>
    </sharedTo>
</ListView>