force-app/main/default/objects/PayrollSlip__c/listViews/PayrollPaymentProcessing.listView-meta.xml
<ListView>
    <fullName>PayrollPaymentProcessing</fullName>
    <columns>NAME</columns>
    <columns>EmployeeID__c</columns>
    <columns>Department__c</columns>
    <columns>PayrollOrder__c</columns>
    <columns>FullName__c</columns>
    <columns>PayrollPaid__c</columns>
    <columns>ActualPayrollPaidDate__c</columns>
    <columns>PayslipIssued__c</columns>
    <columns>ActualSalary__c</columns>
    <columns>TotalWithholding__c</columns>
    <columns>TotalRefund__c</columns>
    <columns>TotalWithholdingAfterDeduction__c</columns>
    <columns>EmployeeNetTakenHome__c</columns>
    <columns>PayPeriodStartDate__c</columns>
    <columns>PayPeriodEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PayrollPaid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>PAYROLL PAYMENT PROCESSING</label>
    <language>en_US</language>
    <sharedTo>
        <role>HRManager</role>
        <role>HRStaff</role>
    </sharedTo>
</ListView>