force-app/main/default/objects/PayrollSlip__c/listViews/Update_Payslip.listView-meta.xml
<ListView>
    <fullName>Update_Payslip</fullName>
    <columns>Payroll_ID__c</columns>
    <columns>NAME</columns>
    <columns>FullName__c</columns>
    <columns>ActualWorkedDay__c</columns>
    <columns>basicsalary__c</columns>
    <columns>productivitysalary__c</columns>
    <columns>NumberOfDaysForPaidLeave__c</columns>
    <columns>unpaidleave__c</columns>
    <columns>bonus__c</columns>
    <columns>Incentivebyquarta__c</columns>
    <columns>totalincomebeforetax__c</columns>
    <columns>PIT__c</columns>
    <columns>incomeaftertaxes__c</columns>
    <filterScope>Everything</filterScope>
    <label>Update Payslip</label>
</ListView>